# monad-skeleton

./: .travis.yml  CHANGELOG.md  README.md  monad-skeleton.cabal  stack.yaml  undead-monads.cabal
src/Control/Monad/: Skeleton.hs  Undead.hs  Zombie.hs
src/Control/Monad/Skeleton/: Internal.hs
src/Control/Monad/Zombie/: Internal.hs
