name:                monad-skeleton
version:             0.2
synopsis:            Monads of program skeleta
description:         Fast operational monad library
homepage:            https://github.com/fumieval/monad-skeleton
bug-reports:         http://github.com/fumieval/monad-skeleton/issues
license:             BSD3
license-file:        LICENSE
author:              Fumiaki Kinoshita
maintainer:          Fumiaki Kinoshita <fumiexcel@gmail.com>
copyright:           Copyright (c) 2021 Fumiaki Kinoshita
category:            Control, Monads
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  .travis.yml
  .gitignore
  README.md
tested-with: GHC == 8.10.7, GHC == 9.2.1

source-repository head
  type: git
  location: https://github.com/fumieval/monad-skeleton.git

library
  exposed-modules:     Control.Monad.Skeleton
    , Control.Monad.Skeleton.Internal
    , Control.Monad.Zombie
  build-depends:       base == 4.*
  hs-source-dirs: src
  ghc-options: -Wall -Wcompat
  default-language:    Haskell2010
