cabal-version:       2.4
name:                monad-skeleton
version:             0.2
synopsis:            Monads of program skeleta
description:         Fast operational monad library
homepage:            https://github.com/fumieval/monad-skeleton
bug-reports:         http://github.com/fumieval/monad-skeleton/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Fumiaki Kinoshita
maintainer:          Fumiaki Kinoshita <fumiexcel@gmail.com>
copyright:           Copyright (c) 2021 Fumiaki Kinoshita
category:            Control, Monads
build-type:          Simple

extra-source-files:
  .gitignore
  README.md
  CHANGELOG.md
tested-with: GHC == 8.10.7, GHC == 9.2.1

source-repository head
  type: git
  location: https://github.com/fumieval/monad-skeleton.git

library
  exposed-modules:     Control.Monad.Skeleton
    , Control.Monad.Skeleton.Internal
    , Control.Monad.Zombie
  build-depends:       base >= 4.9 && <4.17
  hs-source-dirs: src
  ghc-options: -Wall -Wcompat
  default-language:    Haskell2010
